docs/docs/0.3.0/html/_sources/gallery/tutorials/0300_benchmark.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/tutorials/0300_benchmark.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_tutorials_0300_benchmark.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_tutorials_0300_benchmark.py:


Benchmarking
============

You can easily compare predictive performance of multiple algorithms such as
``Silverkite`` and ``Prophet`` using the
`~greykite.framework.benchmark.benchmark_class.BenchmarkForecastConfig` class.
In this tutorial we describe the step by step process of defining, running and monitoring a benchmark.
We also demonstrate how to use the class functions to compute and plot errors for multiple models.

.. GENERATED FROM PYTHON SOURCE LINES 11-28

.. code-block:: default
   :lineno-start: 12


    from dataclasses import replace

    import plotly
    import plotly.graph_objects as go

    from greykite.common.evaluation import EvaluationMetricEnum
    from greykite.framework.benchmark.benchmark_class import BenchmarkForecastConfig
    from greykite.framework.benchmark.data_loader_ts import DataLoaderTS
    from greykite.framework.templates.autogen.forecast_config import ComputationParam
    from greykite.framework.templates.autogen.forecast_config import EvaluationMetricParam
    from greykite.framework.templates.autogen.forecast_config import EvaluationPeriodParam
    from greykite.framework.templates.autogen.forecast_config import MetadataParam
    from greykite.framework.templates.autogen.forecast_config import ForecastConfig
    from greykite.framework.templates.autogen.forecast_config import ModelComponentsParam
    from greykite.sklearn.cross_validation import RollingTimeSeriesSplit








.. GENERATED FROM PYTHON SOURCE LINES 29-33

Load the data
-------------
First load your dataset into a pandas dataframe.
We will use the peyton-manning dataset as a running example.

.. GENERATED FROM PYTHON SOURCE LINES 33-39

.. code-block:: default
   :lineno-start: 34


    # Loads dataset into UnivariateTimeSeries
    dl = DataLoaderTS()
    ts = dl.load_peyton_manning_ts()
    df = ts.df  # cleaned pandas.DataFrame








.. GENERATED FROM PYTHON SOURCE LINES 40-47

Define the Configs
------------------
We specify the models we want to benchmark via the ``configs`` parameter.
In this example we will benchmark 1 ``Prophet`` and 2 different ``Silverkite`` models.
We first define the common components of the models
such as ``MetadataParam`` and ``EvaluationMetricParam``, and then update the configuration to specify
individual models.

.. GENERATED FROM PYTHON SOURCE LINES 47-92

.. code-block:: default
   :lineno-start: 48


    ## Define common components  of the configs
    # Specifies dataset information
    metadata = MetadataParam(
        time_col="ts",   # name of the time column
        value_col="y",   # name of the value column
        freq="D"         # "H" for hourly, "D" for daily, "W" for weekly, etc.
    )

    # Defines number of periods to forecast into the future
    forecast_horizon = 7

    # Specifies intended coverage of the prediction interval
    coverage = 0.95

    # Defines the metrics to evaluate the forecasts
    # We use Mean Absolute Percent Error (MAPE) in this tutorial
    evaluation_metric = EvaluationMetricParam(
        cv_selection_metric=EvaluationMetricEnum.MeanAbsolutePercentError.name,
        cv_report_metrics=None
    )

    # Defines the cross-validation config within pipeline
    evaluation_period = EvaluationPeriodParam(
        cv_max_splits=1,  # Benchmarking n_splits is defined in tscv, here we don't need split to choose parameter sets
        periods_between_train_test=0,
    )

    # Defines parameters related to grid-search computation
    computation = ComputationParam(
        hyperparameter_budget=None,
        n_jobs=-1,  # to debug, change to 1 for more informative error messages
        verbose=3)

    # Defines common components across all the configs
    # ``model_template`` and ``model_components_param`` changes between configs
    common_config = ForecastConfig(
        metadata_param=metadata,
        forecast_horizon=forecast_horizon,
        coverage=coverage,
        evaluation_metric_param=evaluation_metric,
        evaluation_period_param=evaluation_period,
        computation_param=computation,
    )








.. GENERATED FROM PYTHON SOURCE LINES 93-94

Now we update ``common_config`` to specify the individual models.

.. GENERATED FROM PYTHON SOURCE LINES 94-145

.. code-block:: default
   :lineno-start: 95


    # Defines ``Prophet`` model template with custom seasonality
    model_components = ModelComponentsParam(
        seasonality={
                "seasonality_mode": ["additive"],
                "yearly_seasonality": ["auto"],
                "weekly_seasonality": [True],
            },
            growth={
                "growth_term": ["linear"]
            }
    )
    param_update = dict(
        model_template="PROPHET",
        model_components_param=model_components
    )
    Prophet = replace(common_config, **param_update)

    # Defines ``Silverkite`` model template with automatic autoregression
    # and changepoint detection
    model_components = ModelComponentsParam(
        changepoints={
            "changepoints_dict": {
                "method": "auto",
            }
        },
        autoregression={
            "autoreg_dict": "auto"
        }
    )
    param_update = dict(
        model_template="SILVERKITE",
        model_components_param=model_components
    )
    Silverkite_1 = replace(common_config, **param_update)

    # Defines ``Silverkite`` model template via string encoding
    param_update = dict(
        model_template="DAILY_SEAS_NMQM_GR_LINEAR_CP_NM_HOL_SP2_FEASET_AUTO_ALGO_RIDGE_AR_AUTO_DSI_AUTO_WSI_AUTO",
        model_components_param=None
    )
    Silverkite_2 = replace(common_config, **param_update)

    # Define the list of configs to benchmark
    # The dictionary keys will be used to store the benchmark results
    configs = {
        "Prophet": Prophet,
        "SK_1": Silverkite_1,
        "SK_2": Silverkite_2,
    }








.. GENERATED FROM PYTHON SOURCE LINES 146-155

Define the Cross-Validation (CV)
--------------------------------
In time-series forecasting we use a Rolling Window CV.
You can easily define it by using
`~greykite.sklearn.cross_validation.RollingTimeSeriesSplit` class.
The CV parameters depend on the data frequency,
forecast horizon as well as the speed of the models.
See ``Benchmarking documentation`` for guidance on how
to choose CV parameters for your use case.

.. GENERATED FROM PYTHON SOURCE LINES 155-171

.. code-block:: default
   :lineno-start: 156


    # Define the benchmark folds
    # CV parameters are changed for illustration purpose
    tscv = RollingTimeSeriesSplit(
        forecast_horizon=forecast_horizon,
        min_train_periods=2 * 365,
        expanding_window=True,
        use_most_recent_splits=True,
        periods_between_splits=5,
        periods_between_train_test=0,
        max_splits=4)  # reduced to 4 from 16 for faster runtime

    # Print the train, test split for BM folds
    for split_num, (train, test) in enumerate(tscv.split(X=df)):
        print(split_num, train, test)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    0 [   0    1    2 ... 2939 2940 2941] [2942 2943 2944 2945 2946 2947 2948]
    1 [   0    1    2 ... 2944 2945 2946] [2947 2948 2949 2950 2951 2952 2953]
    2 [   0    1    2 ... 2949 2950 2951] [2952 2953 2954 2955 2956 2957 2958]
    3 [   0    1    2 ... 2954 2955 2956] [2957 2958 2959 2960 2961 2962 2963]




.. GENERATED FROM PYTHON SOURCE LINES 172-178

Run the Benchmark
-----------------
To start the benchmarking procedure execute its ``run`` method.

If you get an error message at this point, then there is a compatibility issue between your
benchmark inputs. Check :ref:`Debugging the Benchmark` section for instructions on how to derive valid inputs.

.. GENERATED FROM PYTHON SOURCE LINES 178-182

.. code-block:: default
   :lineno-start: 179


    bm = BenchmarkForecastConfig(df=df, configs=configs, tscv=tscv)
    bm.run()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

      0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | 0/3 [00:00<?, ?it/s]    Benchmarking 'Prophet' :   0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | 0/3 [00:00<?, ?it/s]
      0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | 0/4 [00:00<?, ?it/s]
    Split '0' :   0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | 0/4 [00:00<?, ?it/s]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '0' :  25%|############################################################################################################################################################################################                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | 1/4 [02:27<07:23, 147.88s/it]
    Split '1' :  25%|############################################################################################################################################################################################                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | 1/4 [02:27<07:23, 147.88s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '1' :  50%|########################################################################################################################################################################################################################################################################################################################################################################################                                                                                                                                                                                                                                                                                                                                                                                        | 2/4 [05:09<05:03, 151.90s/it]
    Split '2' :  50%|########################################################################################################################################################################################################################################################################################################################################################################################                                                                                                                                                                                                                                                                                                                                                                                        | 2/4 [05:09<05:03, 151.90s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '2' :  75%|####################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################                                                                                                                                                                                            | 3/4 [07:35<02:30, 150.26s/it]
    Split '3' :  75%|####################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################                                                                                                                                                                                            | 3/4 [07:35<02:30, 150.26s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '3' : 100%|################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 4/4 [10:05<00:00, 150.16s/it]    Split '3' : 100%|################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 4/4 [10:05<00:00, 151.38s/it]
    Benchmarking 'Prophet' :  33%|######################################################################################################################################################################################################################################################3                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | 1/3 [10:05<20:11, 605.54s/it]    Benchmarking 'SK_1' :  33%|#######################################################################################################################################################################################################################################################3                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | 1/3 [10:05<20:11, 605.54s/it]
      0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | 0/4 [00:00<?, ?it/s]
    Split '0' :   0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | 0/4 [00:00<?, ?it/s]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '0' :  25%|############################################################################################################################################################################################2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | 1/4 [01:01<03:03, 61.10s/it]
    Split '1' :  25%|############################################################################################################################################################################################2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | 1/4 [01:01<03:03, 61.10s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '1' :  50%|########################################################################################################################################################################################################################################################################################################################################################################################5                                                                                                                                                                                                                                                                                                                                                                                        | 2/4 [02:00<02:01, 60.67s/it]
    Split '2' :  50%|########################################################################################################################################################################################################################################################################################################################################################################################5                                                                                                                                                                                                                                                                                                                                                                                        | 2/4 [02:00<02:01, 60.67s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '2' :  75%|####################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################7                                                                                                                                                                                            | 3/4 [03:04<01:01, 61.54s/it]
    Split '3' :  75%|####################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################7                                                                                                                                                                                            | 3/4 [03:04<01:01, 61.54s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '3' : 100%|#################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 4/4 [04:04<00:00, 61.10s/it]    Split '3' : 100%|#################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 4/4 [04:04<00:00, 61.11s/it]
    Benchmarking 'SK_1' :  67%|##############################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################6                                                                                                                                                                                                                                                       | 2/3 [14:09<08:17, 497.20s/it]    Benchmarking 'SK_2' :  67%|##############################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################6                                                                                                                                                                                                                                                       | 2/3 [14:09<08:17, 497.20s/it]
      0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | 0/4 [00:00<?, ?it/s]
    Split '0' :   0%|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | 0/4 [00:00<?, ?it/s]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '0' :  25%|############################################################################################################################################################################################2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | 1/4 [00:45<02:15, 45.14s/it]
    Split '1' :  25%|############################################################################################################################################################################################2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | 1/4 [00:45<02:15, 45.14s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '1' :  50%|########################################################################################################################################################################################################################################################################################################################################################################################5                                                                                                                                                                                                                                                                                                                                                                                        | 2/4 [01:30<01:30, 45.24s/it]
    Split '2' :  50%|########################################################################################################################################################################################################################################################################################################################################################################################5                                                                                                                                                                                                                                                                                                                                                                                        | 2/4 [01:30<01:30, 45.24s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '2' :  75%|####################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################7                                                                                                                                                                                            | 3/4 [02:16<00:45, 45.42s/it]
    Split '3' :  75%|####################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################7                                                                                                                                                                                            | 3/4 [02:16<00:45, 45.42s/it]Fitting 1 folds for each of 1 candidates, totalling 1 fits

    Split '3' : 100%|#################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 4/4 [03:05<00:00, 46.40s/it]    Split '3' : 100%|#################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 4/4 [03:05<00:00, 46.29s/it]
    Benchmarking 'SK_2' : 100%|######################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 3/3 [17:15<00:00, 403.59s/it]    Benchmarking 'SK_2' : 100%|######################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################################| 3/3 [17:15<00:00, 345.04s/it]




.. GENERATED FROM PYTHON SOURCE LINES 183-196

Monitor the Benchmark
---------------------
During benchmarking a couple of color coded progress bars are displayed to inform the user of the
advancement of the entire process. The first bar displays ``config`` level information, while
the second bar displays split level information for the current ``config``.
See example in `Benchmarking documentation`.

On the left side of the progress bar, it shows which ``config``/ split is currently being
benchmarked and progress within that level as a percentage.

On the right side, the user can see how many ``configs``/ splits have been benchmarked
and how many are remaining. Additionally, this bar also displays elapsed time and remaining runtime
for the corresponding level.

.. GENERATED FROM PYTHON SOURCE LINES 198-206

Benchmark Output
----------------
The output of a successful benchmark procedure is stored as a nested dictionary under the class attribute
``result``. For details on the structure of this tree check
``Benchmarking documentation``.

You can extract any specific information by navigating this tree. For example, you can
check the summary and component plot of any ``config``.

.. GENERATED FROM PYTHON SOURCE LINES 206-211

.. code-block:: default
   :lineno-start: 207


    # Check summary of SK_1 model on first fold
    model = bm.result["SK_2"]["rolling_evaluation"]["split_0"]["pipeline_result"].model
    model[-1].summary(max_colwidth=30)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    ================================ Model Summary =================================

    Number of observations: 2942,   Number of features: 264
    Method: Ridge regression
    Number of nonzero features: 264
    Regularization parameter: 117.7

    Residuals:
             Min           1Q       Median           3Q          Max
          -2.303      -0.2482     -0.05582       0.1646        3.284

                          Pred_col    Estimate  Std. Err Pr(>)_boot sig. code                   95%CI
                         Intercept       2.965    0.2099     <2e-16       ***          (2.554, 3.324)
           events_Chinese New Year    0.008817   0.02497      0.738                (-0.04052, 0.0559)
         events_Chinese New Year-1   -0.007394     0.022      0.734               (-0.05198, 0.03921)
         events_Chinese New Year-2    0.006923   0.02451      0.756                (-0.0436, 0.05288)
         events_Chinese New Year+1     0.01846   0.02381      0.464               (-0.02704, 0.06565)
         events_Chinese New Year+2     0.02686   0.02189      0.228               (-0.01829, 0.06911)
              events_Christmas Day    -0.02871   0.01467      0.048         *   (-0.06303, -0.006849)
            events_Christmas Day-1    -0.01011   0.01165      0.388               (-0.03425, 0.01093)
            events_Christmas Day-2    0.001614   0.01679      0.926               (-0.03515, 0.02929)
            events_Christmas Day+1    -0.01831   0.01301      0.134              (-0.04523, 0.002494)
            events_Christmas Day+2     0.01677   0.00971      0.080         .    (0.0004935, 0.03583)
     events_Easter...hern Ireland]    -0.01215  0.007856      0.114              (-0.02741, 0.003027)
     events_Easter...rn Ireland]-1    -0.01415  0.007573      0.056         .  (-0.02843, -0.0004421)
     events_Easter...rn Ireland]-2   -0.008775  0.005975      0.138              (-0.02034, 0.002272)
     events_Easter...rn Ireland]+1   -0.007284  0.005002      0.152              (-0.01752, 0.001677)
     events_Easter...rn Ireland]+2   -0.001308  0.003568      0.700             (-0.009058, 0.004738)
                events_Good Friday    -0.01412  0.005964      0.020         *    (-0.02681, -0.00365)
              events_Good Friday-1    -0.01206  0.005733      0.028         *   (-0.02346, -0.002118)
              events_Good Friday-2   -0.006199  0.005106      0.204               (-0.0178, 0.002771)
              events_Good Friday+1   -0.008775  0.005975      0.138              (-0.02034, 0.002272)
              events_Good Friday+2    -0.01415  0.007573      0.056         .  (-0.02843, -0.0004421)
           events_Independence Day   -0.000225  0.007132      0.986               (-0.01433, 0.01364)
         events_Independence Day-1   -0.003607  0.007528      0.612                (-0.01747, 0.0121)
         events_Independence Day-2   -0.006484  0.005597      0.244              (-0.01769, 0.005071)
         events_Independence Day+1   -0.009717  0.007555      0.190              (-0.02515, 0.004399)
         events_Independence Day+2    -0.00868  0.007509      0.266              (-0.02096, 0.007891)
                  events_Labor Day    -0.02663   0.01061      0.012         *     (-0.0474, -0.00631)
                events_Labor Day-1   -0.009148  0.009239      0.332              (-0.02844, 0.008999)
                events_Labor Day-2  -0.0002308  0.008004      0.974               (-0.01483, 0.01533)
                events_Labor Day+1    -0.01655  0.008015      0.040         *  (-0.03214, -0.0005531)
                events_Labor Day+2    -0.01967  0.007969      0.008        **   (-0.03581, -0.005258)
               events_Memorial Day    -0.02561  0.008558      0.004        **   (-0.04127, -0.009526)
             events_Memorial Day-1    -0.01476  0.006502      0.020         *   (-0.02769, -0.003204)
             events_Memorial Day-2   -0.001302  0.005761      0.836               (-0.01196, 0.01149)
             events_Memorial Day+1   -0.007095  0.004158      0.098         .   (-0.01553, 0.0001229)
             events_Memorial Day+2    0.009335  0.006485      0.128              (-0.001429, 0.02421)
              events_New Years Day   0.0006682  0.007139      0.914                 (-0.01383, 0.014)
            events_New Years Day-1    0.008595  0.008506      0.290              (-0.007049, 0.02607)
            events_New Years Day-2     0.01824   0.01158      0.120              (-0.001568, 0.04214)
            events_New Years Day+1     0.02204   0.01179      0.048         *     (0.003227, 0.04704)
            events_New Years Day+2     0.01869   0.01115      0.086         .    (-0.001164, 0.04298)
                      events_Other    0.001338   0.02089      0.952               (-0.04007, 0.04377)
                    events_Other-1   -0.001463   0.02119      0.954               (-0.04055, 0.03808)
                    events_Other-2     0.01624   0.01955      0.396               (-0.02578, 0.05466)
                    events_Other+1     0.02564   0.01991      0.196               (-0.01367, 0.06686)
                    events_Other+2      0.0182   0.01766      0.294               (-0.01432, 0.05528)
               events_Thanksgiving    -0.01042  0.005658      0.058         .  (-0.02187, -0.0003127)
             events_Thanksgiving-1    -0.02248  0.006854      0.002        **   (-0.03503, -0.009543)
             events_Thanksgiving-2    -0.01707  0.006433      0.008        **    (-0.03007, -0.00509)
             events_Thanksgiving+1   -0.004407  0.005689      0.486              (-0.01504, 0.007072)
             events_Thanksgiving+2   -0.009606  0.004942      0.036         *   (-0.01955, -0.001617)
               events_Veterans Day   -0.002034  0.006647      0.710               (-0.01507, 0.01182)
             events_Veterans Day-1   -0.004356  0.005579      0.440              (-0.01612, 0.006205)
             events_Veterans Day-2   -0.002385  0.007162      0.754               (-0.01538, 0.01145)
             events_Veterans Day+1   -0.001234  0.005733      0.818               (-0.01248, 0.01001)
             events_Veterans Day+2   -0.001581  0.005281      0.718              (-0.01279, 0.008782)
                     str_dow_2-Tue    0.003023  0.006723      0.640               (-0.01042, 0.01572)
                     str_dow_3-Wed   -0.002956  0.005859      0.640              (-0.01531, 0.007791)
                     str_dow_4-Thu   -0.005623  0.005569      0.296              (-0.01516, 0.006415)
                     str_dow_5-Fri   -0.008711  0.005488      0.102              (-0.01942, 0.002191)
                     str_dow_6-Sat     -0.0262  0.005481     <2e-16       ***    (-0.03728, -0.01566)
                     str_dow_7-Sun    0.008492  0.007044      0.218              (-0.004387, 0.02268)
                               ct1   0.0009897   0.01555      0.972               (-0.03026, 0.02945)
                    is_weekend:ct1   -0.007036  0.007105      0.316               (-0.0217, 0.005884)
                 str_dow_2-Tue:ct1    0.002971  0.007166      0.668               (-0.01229, 0.01678)
                 str_dow_3-Wed:ct1  -0.0006307  0.005655      0.920                (-0.0109, 0.01058)
                 str_dow_4-Thu:ct1   -0.005121  0.004617      0.260              (-0.01347, 0.003786)
                 str_dow_5-Fri:ct1    0.001921  0.005281      0.740              (-0.008181, 0.01162)
                 str_dow_6-Sat:ct1    -0.00856   0.00563      0.136              (-0.01884, 0.002817)
                 str_dow_7-Sun:ct1    0.001523    0.0075      0.844               (-0.01431, 0.01493)
                 cp0_2008_09_29_00     0.02917  0.004297     <2e-16       ***      (0.02033, 0.03652)
      is_weekend:cp0_2008_09_29_00    0.007846  0.002262     <2e-16       ***     (0.003459, 0.01216)
     str_dow_2-Tue...2008_09_29_00    0.003271  0.003081      0.272             (-0.003398, 0.008554)
     str_dow_3-Wed...2008_09_29_00    0.004253  0.002194      0.038         *   (0.0001322, 0.008253)
     str_dow_4-Thu...2008_09_29_00    0.002672  0.002351      0.260              (-0.002092, 0.00725)
     str_dow_5-Fri...2008_09_29_00    0.005349  0.002655      0.034         *    (0.0001699, 0.01025)
     str_dow_6-Sat...2008_09_29_00    0.004283  0.002609      0.108            (-0.0009071, 0.009296)
     str_dow_7-Sun...2008_09_29_00    0.003563  0.002973      0.224             (-0.002561, 0.009095)
                 cp1_2008_11_03_00     0.03149   0.00467     <2e-16       ***      (0.02164, 0.03921)
      is_weekend:cp1_2008_11_03_00    0.008594  0.002598      0.004        **       (0.0034, 0.01363)
     str_dow_2-Tue...2008_11_03_00    0.003635  0.003003      0.226             (-0.002728, 0.008747)
     str_dow_3-Wed...2008_11_03_00    0.004895  0.002158      0.022         *   (0.0008009, 0.008679)
     str_dow_4-Thu...2008_11_03_00    0.003802  0.002244      0.088         .  (-0.0005713, 0.008133)
     str_dow_5-Fri...2008_11_03_00    0.005399  0.002599      0.034         *    (0.0003535, 0.01026)
     str_dow_6-Sat...2008_11_03_00    0.005411  0.002538      0.038         *     (0.000337, 0.01015)
     str_dow_7-Sun...2008_11_03_00    0.003183  0.003088      0.294             (-0.003181, 0.009467)
                 cp2_2008_12_15_00     0.03102  0.005729     <2e-16       ***      (0.01934, 0.04193)
      is_weekend:cp2_2008_12_15_00    0.008548  0.003594      0.016         *     (0.001512, 0.01584)
     str_dow_2-Tue...2008_12_15_00    0.003996  0.003059      0.192             (-0.002293, 0.009543)
     str_dow_3-Wed...2008_12_15_00    0.004385  0.002339      0.066         .  (-0.0004361, 0.009031)
     str_dow_4-Thu...2008_12_15_00    0.004243  0.002318      0.072         .  (-0.0002811, 0.008712)
     str_dow_5-Fri...2008_12_15_00    0.004503  0.002858      0.124             (-0.001287, 0.009963)
     str_dow_6-Sat...2008_12_15_00     0.00561  0.002809      0.046         *    (0.0001591, 0.01109)
     str_dow_7-Sun...2008_12_15_00    0.002937  0.003721      0.410              (-0.004639, 0.01037)
                 cp3_2009_01_12_00     0.03041   0.00651     <2e-16       ***      (0.01714, 0.04304)
      is_weekend:cp3_2009_01_12_00     0.00889  0.004253      0.032         *    (0.0005054, 0.01752)
     str_dow_2-Tue...2009_01_12_00     0.00391  0.003283      0.242              (-0.002784, 0.01012)
     str_dow_3-Wed...2009_01_12_00    0.003811  0.002575      0.128             (-0.001431, 0.008929)
     str_dow_4-Thu...2009_01_12_00    0.003946  0.002489      0.104            (-0.0009332, 0.008785)
     str_dow_5-Fri...2009_01_12_00    0.004046   0.00296      0.164              (-0.001806, 0.00988)
     str_dow_6-Sat...2009_01_12_00    0.005577  0.003072      0.076         .   (-0.0006909, 0.01162)
     str_dow_7-Sun...2009_01_12_00    0.003313   0.00419      0.406              (-0.004832, 0.01184)
                 cp4_2009_12_21_00    -0.03085   0.01089      0.008        **   (-0.05007, -0.007663)
      is_weekend:cp4_2009_12_21_00   -0.008356  0.005957      0.142                (-0.021, 0.002695)
     str_dow_2-Tue...2009_12_21_00   -0.007854   0.00689      0.258              (-0.02195, 0.005759)
     str_dow_3-Wed...2009_12_21_00    -0.00254  0.005096      0.584              (-0.01219, 0.007658)
     str_dow_4-Thu...2009_12_21_00  -0.0004646  0.004239      0.938              (-0.00812, 0.007629)
     str_dow_5-Fri...2009_12_21_00   -0.006552   0.00611      0.282              (-0.01909, 0.004963)
     str_dow_6-Sat...2009_12_21_00   -0.002316  0.005406      0.694              (-0.01313, 0.008381)
     str_dow_7-Sun...2009_12_21_00    -0.00604  0.007168      0.386              (-0.02006, 0.008383)
                 cp5_2010_01_25_00    -0.02798   0.01161      0.022         *   (-0.04942, -0.003957)
      is_weekend:cp5_2010_01_25_00    -0.00701  0.006457      0.280               (-0.02032, 0.00515)
     str_dow_2-Tue...2010_01_25_00   -0.007705  0.007337      0.292               (-0.0235, 0.006838)
     str_dow_3-Wed...2010_01_25_00   -0.002461  0.005292      0.618              (-0.01345, 0.008075)
     str_dow_4-Thu...2010_01_25_00  -0.0005531  0.004362      0.902             (-0.008435, 0.007775)
     str_dow_5-Fri...2010_01_25_00   -0.006758  0.006132      0.274              (-0.01927, 0.004827)
     str_dow_6-Sat...2010_01_25_00   -0.002428  0.005721      0.690               (-0.0135, 0.008585)
     str_dow_7-Sun...2010_01_25_00   -0.004582  0.007816      0.544               (-0.01947, 0.01135)
                 cp6_2011_02_14_00     0.01622   0.01372      0.246               (-0.01027, 0.04373)
      is_weekend:cp6_2011_02_14_00    0.008574  0.007986      0.286               (-0.00637, 0.02452)
     str_dow_2-Tue...2011_02_14_00  -0.0006729  0.007438      0.934               (-0.01527, 0.01421)
     str_dow_3-Wed...2011_02_14_00     0.00302  0.006295      0.586              (-0.009375, 0.01528)
     str_dow_4-Thu...2011_02_14_00    0.002021  0.005611      0.704               (-0.00902, 0.01192)
     str_dow_5-Fri...2011_02_14_00   0.0008316  0.007157      0.914               (-0.01264, 0.01488)
     str_dow_6-Sat...2011_02_14_00    0.003803  0.007207      0.594               (-0.01009, 0.01762)
     str_dow_7-Sun...2011_02_14_00    0.004771  0.008587      0.578               (-0.01247, 0.02108)
                 cp7_2012_02_27_00    -0.07577   0.01313     <2e-16       ***     (-0.1026, -0.04948)
      is_weekend:cp7_2012_02_27_00    -0.01927  0.006804      0.006        **   (-0.03228, -0.006636)
     str_dow_2-Tue...2012_02_27_00    -0.01028  0.008542      0.262               (-0.0255, 0.006751)
     str_dow_3-Wed...2012_02_27_00    -0.01245  0.008697      0.134              (-0.02876, 0.004133)
     str_dow_4-Thu...2012_02_27_00    -0.01104  0.007737      0.158              (-0.02527, 0.003707)
     str_dow_5-Fri...2012_02_27_00   -0.008471  0.007934      0.264              (-0.02486, 0.007102)
     str_dow_6-Sat...2012_02_27_00   -0.009283  0.007428      0.210              (-0.02304, 0.004919)
     str_dow_7-Sun...2012_02_27_00   -0.009986  0.008261      0.216              (-0.02705, 0.005595)
                 cp8_2012_04_09_00    -0.06731   0.01164     <2e-16       ***    (-0.08912, -0.04452)
      is_weekend:cp8_2012_04_09_00    -0.01855  0.006017      0.006        **   (-0.03082, -0.007301)
     str_dow_2-Tue...2012_04_09_00    -0.00834  0.008481      0.332              (-0.02338, 0.008327)
     str_dow_3-Wed...2012_04_09_00     -0.0106   0.00808      0.162              (-0.02529, 0.005266)
     str_dow_4-Thu...2012_04_09_00   -0.009458  0.007247      0.188              (-0.02289, 0.004402)
     str_dow_5-Fri...2012_04_09_00   -0.008448  0.007462      0.244              (-0.02435, 0.006796)
     str_dow_6-Sat...2012_04_09_00   -0.009257  0.006962      0.178              (-0.02219, 0.003666)
     str_dow_7-Sun...2012_04_09_00   -0.009291  0.007845      0.234              (-0.02521, 0.004301)
                 cp9_2013_03_04_00    0.002585   0.01338      0.846               (-0.02237, 0.03081)
      is_weekend:cp9_2013_03_04_00   -0.007843  0.007604      0.292              (-0.02327, 0.007481)
     str_dow_2-Tue...2013_03_04_00    0.008631  0.009267      0.326              (-0.009905, 0.02874)
     str_dow_3-Wed...2013_03_04_00    0.001946   0.00664      0.786               (-0.01098, 0.01519)
     str_dow_4-Thu...2013_03_04_00    0.001504  0.006251      0.822               (-0.01046, 0.01354)
     str_dow_5-Fri...2013_03_04_00   0.0005988  0.007177      0.922               (-0.01428, 0.01362)
     str_dow_6-Sat...2013_03_04_00   -0.004664  0.006954      0.502              (-0.01824, 0.008634)
     str_dow_7-Sun...2013_03_04_00   -0.003179  0.009002      0.680               (-0.02196, 0.01382)
                cp10_2014_01_27_00    -0.03732    0.0207      0.072         .    (-0.07496, 0.002697)
     is_weekend:cp10_2014_01_27_00    -0.01336   0.01022      0.206              (-0.03463, 0.006909)
     str_dow_2-Tue...2014_01_27_00    0.003921   0.01319      0.760               (-0.02352, 0.02989)
     str_dow_3-Wed...2014_01_27_00   -0.006801  0.007873      0.402              (-0.02149, 0.008094)
     str_dow_4-Thu...2014_01_27_00   -0.005538   0.00821      0.512               (-0.02026, 0.01004)
     str_dow_5-Fri...2014_01_27_00   -0.004572  0.009036      0.632                (-0.0225, 0.01142)
     str_dow_6-Sat...2014_01_27_00   -0.009516  0.007294      0.182              (-0.02298, 0.004869)
     str_dow_7-Sun...2014_01_27_00   -0.003845    0.0111      0.714                (-0.02429, 0.0168)
               ct1:sin1_tow_weekly    0.005807  0.008225      0.498               (-0.01075, 0.02147)
               ct1:cos1_tow_weekly     0.01662   0.01105      0.132              (-0.005548, 0.03776)
               ct1:sin2_tow_weekly    0.003477  0.008837      0.688               (-0.01293, 0.02105)
               ct1:cos2_tow_weekly     0.01417   0.01114      0.208              (-0.008117, 0.03643)
     cp0_2008_09_2...n1_tow_weekly   -0.001419  0.002997      0.632             (-0.006961, 0.004627)
     cp0_2008_09_2...s1_tow_weekly   0.0009128  0.004133      0.818             (-0.006605, 0.009158)
     cp0_2008_09_2...n2_tow_weekly    0.001821  0.003421      0.600             (-0.004609, 0.008808)
     cp0_2008_09_2...s2_tow_weekly    0.001568  0.004148      0.712              (-0.006166, 0.00947)
     cp1_2008_11_0...n1_tow_weekly  -0.0008425  0.003167      0.776              (-0.00702, 0.005026)
     cp1_2008_11_0...s1_tow_weekly   -0.001172  0.004102      0.750             (-0.009089, 0.006583)
     cp1_2008_11_0...n2_tow_weekly    0.001914  0.003592      0.586             (-0.005142, 0.008878)
     cp1_2008_11_0...s2_tow_weekly   9.414e-05  0.004182      0.984             (-0.007629, 0.008404)
     cp2_2008_12_1...n1_tow_weekly  -0.0004797  0.003971      0.894             (-0.008319, 0.006805)
     cp2_2008_12_1...s1_tow_weekly   -0.000434  0.004661      0.922              (-0.01022, 0.008607)
     cp2_2008_12_1...n2_tow_weekly    0.001767  0.004376      0.692             (-0.007119, 0.009558)
     cp2_2008_12_1...s2_tow_weekly   0.0002508  0.004675      0.956             (-0.008466, 0.009012)
     cp3_2009_01_1...n1_tow_weekly   -0.001298  0.004618      0.782               (-0.01022, 0.00703)
     cp3_2009_01_1...s1_tow_weekly    0.001025  0.005177      0.844              (-0.009923, 0.01084)
     cp3_2009_01_1...n2_tow_weekly    0.001426  0.005008      0.784              (-0.008461, 0.01042)
     cp3_2009_01_1...s2_tow_weekly   0.0007287  0.005163      0.908              (-0.009326, 0.01058)
     cp4_2009_12_2...n1_tow_weekly    0.001004  0.008051      0.886               (-0.01458, 0.01668)
     cp4_2009_12_2...s1_tow_weekly   -0.006346   0.01039      0.512                (-0.02801, 0.0136)
     cp4_2009_12_2...n2_tow_weekly    -0.00643  0.009535      0.500              (-0.02645, 0.009724)
     cp4_2009_12_2...s2_tow_weekly   -0.001992   0.01027      0.886                (-0.02315, 0.0162)
     cp5_2010_01_2...n1_tow_weekly   0.0002179  0.008527      0.988               (-0.01632, 0.01688)
     cp5_2010_01_2...s1_tow_weekly   -0.003483   0.01099      0.722               (-0.02537, 0.01789)
     cp5_2010_01_2...n2_tow_weekly   -0.007881   0.01028      0.424               (-0.02909, 0.01119)
     cp5_2010_01_2...s2_tow_weekly  -0.0009155    0.0107      0.946               (-0.02179, 0.01899)
     cp6_2011_02_1...n1_tow_weekly   -0.004504    0.0103      0.682               (-0.02257, 0.01571)
     cp6_2011_02_1...s1_tow_weekly   0.0009163   0.01238      0.940               (-0.02418, 0.02613)
     cp6_2011_02_1...n2_tow_weekly   -0.005898   0.01092      0.600               (-0.02692, 0.01497)
     cp6_2011_02_1...s2_tow_weekly   -0.002832   0.01177      0.806               (-0.02806, 0.01971)
     cp7_2012_02_2...n1_tow_weekly   -0.004437  0.009976      0.664               (-0.02233, 0.01568)
     cp7_2012_02_2...s1_tow_weekly    -0.00447   0.01371      0.762               (-0.02801, 0.02487)
     cp7_2012_02_2...n2_tow_weekly    0.003101   0.01102      0.770               (-0.01953, 0.02595)
     cp7_2012_02_2...s2_tow_weekly    -0.00233   0.01329      0.872                (-0.0269, 0.02474)
     cp8_2012_04_0...n1_tow_weekly   -0.001007  0.008948      0.914               (-0.01787, 0.01633)
     cp8_2012_04_0...s1_tow_weekly   -0.002355   0.01247      0.856               (-0.02431, 0.02391)
     cp8_2012_04_0...n2_tow_weekly    0.002302   0.01013      0.822               (-0.01875, 0.02302)
     cp8_2012_04_0...s2_tow_weekly   -0.001262   0.01201      0.902               (-0.02321, 0.02399)
     cp9_2013_03_0...n1_tow_weekly     0.01607   0.01001      0.118              (-0.003707, 0.03495)
     cp9_2013_03_0...s1_tow_weekly  -0.0001411   0.01242      0.982               (-0.02271, 0.02534)
     cp9_2013_03_0...n2_tow_weekly    0.007939   0.01107      0.492               (-0.01294, 0.03056)
     cp9_2013_03_0...s2_tow_weekly   0.0002958   0.01131      0.990                (-0.02117, 0.0219)
     cp10_2014_01_...n1_tow_weekly      0.0083   0.01477      0.606                (-0.02225, 0.0363)
     cp10_2014_01_...s1_tow_weekly     0.00182   0.02194      0.948               (-0.03878, 0.05019)
     cp10_2014_01_...n2_tow_weekly    0.007149   0.01701      0.698               (-0.02638, 0.04227)
     cp10_2014_01_...s2_tow_weekly   -0.002585   0.02109      0.928               (-0.03799, 0.04076)
                   sin1_tow_weekly     0.01972   0.01227      0.106              (-0.003361, 0.04278)
                   cos1_tow_weekly     0.05855   0.01626     <2e-16       ***      (0.02365, 0.08746)
                   sin2_tow_weekly    -0.01783   0.01303      0.174              (-0.04384, 0.006361)
                   cos2_tow_weekly     0.04674   0.01675      0.008        **      (0.01588, 0.08178)
                   sin3_tow_weekly    -0.01753   0.01007      0.082         .    (-0.03709, 0.001454)
                   cos3_tow_weekly    0.006611   0.01471      0.656                (-0.0223, 0.03574)
                  sin1_tom_monthly     0.02218  0.005602     <2e-16       ***      (0.01177, 0.03297)
                  cos1_tom_monthly     0.02819  0.005142     <2e-16       ***       (0.0168, 0.03775)
                  sin2_tom_monthly     0.02871   0.01033      0.006        **     (0.008091, 0.04843)
                  cos2_tom_monthly    -0.02524    0.0109      0.016         *   (-0.04668, -0.004058)
                  sin3_tom_monthly    -0.01973   0.01129      0.084         .    (-0.04127, 0.002257)
                  cos3_tom_monthly   -0.003263   0.01128      0.762               (-0.02581, 0.01982)
                  sin4_tom_monthly   -0.005473   0.01069      0.594               (-0.02737, 0.01328)
                  cos4_tom_monthly    -0.01251   0.01136      0.278              (-0.03564, 0.009682)
                sin1_toq_quarterly     0.03604  0.006165     <2e-16       ***      (0.02272, 0.04715)
                cos1_toq_quarterly     0.02043  0.005079     <2e-16       ***      (0.01019, 0.03056)
                sin2_toq_quarterly    0.003041  0.005804      0.588              (-0.009645, 0.01305)
                cos2_toq_quarterly    -0.06069  0.006299     <2e-16       ***    (-0.07268, -0.04824)
                sin3_toq_quarterly     0.01447  0.004554      0.002        **     (0.005525, 0.02304)
                cos3_toq_quarterly    0.002929  0.004624      0.530              (-0.006042, 0.01168)
                sin4_toq_quarterly    0.002214   0.01029      0.850               (-0.01655, 0.02226)
                cos4_toq_quarterly    -0.02977   0.01178      0.010         *   (-0.05214, -0.006532)
                   sin1_ct1_yearly     -0.1233   0.01157     <2e-16       ***      (-0.1448, -0.1014)
                   cos1_ct1_yearly      0.2486   0.01963     <2e-16       ***        (0.2089, 0.2857)
                   sin2_ct1_yearly     0.05541   0.01094     <2e-16       ***      (0.03403, 0.07637)
                   cos2_ct1_yearly    -0.03489   0.01083      0.002        **     (-0.0543, -0.01203)
                   sin3_ct1_yearly       0.134   0.01273     <2e-16       ***         (0.1091, 0.159)
                   cos3_ct1_yearly     0.04137   0.01055     <2e-16       ***       (0.02214, 0.0633)
                   sin4_ct1_yearly     0.02761  0.005175     <2e-16       ***      (0.01743, 0.03747)
                   cos4_ct1_yearly    -0.03381  0.006189     <2e-16       ***     (-0.04527, -0.0204)
                   sin5_ct1_yearly    -0.05087   0.01166     <2e-16       ***    (-0.07322, -0.02857)
                   cos5_ct1_yearly    -0.05311  0.009471     <2e-16       ***    (-0.06956, -0.03311)
                   sin6_ct1_yearly     -0.0773  0.009956     <2e-16       ***    (-0.09526, -0.05546)
                   cos6_ct1_yearly    -0.07697   0.01065     <2e-16       ***    (-0.09746, -0.05537)
                   sin7_ct1_yearly    -0.06562   0.01095     <2e-16       ***    (-0.08578, -0.04467)
                   cos7_ct1_yearly    0.006709   0.01031      0.532               (-0.01472, 0.02547)
                   sin8_ct1_yearly    0.004554  0.005749      0.422              (-0.006758, 0.01622)
                   cos8_ct1_yearly     0.05899  0.006494     <2e-16       ***      (0.04669, 0.07206)
                   sin9_ct1_yearly     0.01046   0.01099      0.340                (-0.01066, 0.0301)
                   cos9_ct1_yearly      -0.016   0.01052      0.134              (-0.03751, 0.001592)
                  sin10_ct1_yearly    -0.05967   0.01044     <2e-16       ***    (-0.08053, -0.03997)
                  cos10_ct1_yearly    -0.08085   0.01153     <2e-16       ***     (-0.1027, -0.05889)
                  sin11_ct1_yearly    -0.03621   0.01148      0.002        **    (-0.05657, -0.01246)
                  cos11_ct1_yearly    -0.01781   0.01039      0.088         .    (-0.03587, 0.003008)
                  sin12_ct1_yearly     0.01431   0.00541      0.010         *     (0.002944, 0.02424)
                  cos12_ct1_yearly      0.0104  0.005994      0.080         .    (-0.001139, 0.02191)
                  sin13_ct1_yearly    -0.02827   0.01095      0.010         *   (-0.04805, -0.008702)
                  cos13_ct1_yearly     0.06145   0.01107     <2e-16       ***      (0.03976, 0.08435)
                  sin14_ct1_yearly     0.02796    0.0104      0.004        **     (0.007414, 0.04773)
                  cos14_ct1_yearly     0.01601   0.01087      0.146              (-0.006158, 0.03645)
                  sin15_ct1_yearly     0.03306   0.01073     <2e-16       ***      (0.01126, 0.05227)
                  cos15_ct1_yearly    -0.02298   0.01071      0.046         *    (-0.0432, 9.161e-05)
                            y_lag7       0.144   0.02503     <2e-16       ***        (0.1014, 0.1919)
                            y_lag8     0.07078    0.0234      0.004        **        (0.02658, 0.116)
                            y_lag9    0.001609   0.01884      0.936               (-0.03575, 0.03625)
                  y_avglag_7_14_21       0.265    0.0268     <2e-16       ***        (0.2144, 0.3148)
                  y_avglag_7_to_13     0.08807   0.02266     <2e-16       ***       (0.04197, 0.1305)
                 y_avglag_14_to_20     0.04531   0.01919      0.026         *     (0.009427, 0.08535)
    Signif. Code: 0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1

    Multiple R-squared: 0.7175,   Adjusted R-squared: 0.7104
    F-statistic: 96.557 on 71 and 2869 DF,   p-value: 1.110e-16
    Model AIC: 18965.0,   model BIC: 19402.0

    WARNING: the condition number is large, 1.23e+04. This might indicate that there are strong multicollinearity or other numerical problems.
    WARNING: the F-ratio and its p-value on regularized methods might be misleading, they are provided only for reference purposes.




.. GENERATED FROM PYTHON SOURCE LINES 212-219

.. code-block:: default
   :lineno-start: 213


    # Check component plot of SK_2 on second fold
    model = bm.result["SK_2"]["rolling_evaluation"]["split_1"]["pipeline_result"].model
    fig = model[-1].plot_components()
    plotly.io.show(fig)





.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_001.html





.. GENERATED FROM PYTHON SOURCE LINES 220-223

Compare forecasts
^^^^^^^^^^^^^^^^^
To obtain forecasts run the ``extract_forecasts`` method. You only need to run this once.

.. GENERATED FROM PYTHON SOURCE LINES 223-226

.. code-block:: default
   :lineno-start: 224


    bm.extract_forecasts()








.. GENERATED FROM PYTHON SOURCE LINES 227-232

This method does two things.

* For every ``config``, it gathers forecast results across rolling windows and stores it
  as a dataframe in ``rolling_forecast_df`` under the ``config`` key. This helps in comparing forecasts
  and prediction accuracy across splits for the ``config``.

.. GENERATED FROM PYTHON SOURCE LINES 232-237

.. code-block:: default
   :lineno-start: 233


    # Forecast across rolling windows for SK_1
    forecast_sk_1 = bm.result["SK_1"]["rolling_forecast_df"]
    forecast_sk_1.head()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>train_end_date</th>
          <th>forecast_step</th>
          <th>split_num</th>
          <th>ts</th>
          <th>actual</th>
          <th>forecast</th>
          <th>forecast_lower</th>
          <th>forecast_upper</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>2015-12-29</td>
          <td>1</td>
          <td>0</td>
          <td>2015-12-30</td>
          <td>8.391403</td>
          <td>7.978420</td>
          <td>7.266909</td>
          <td>8.689931</td>
        </tr>
        <tr>
          <th>1</th>
          <td>2015-12-29</td>
          <td>2</td>
          <td>0</td>
          <td>2015-12-31</td>
          <td>8.004700</td>
          <td>7.918708</td>
          <td>7.244068</td>
          <td>8.593347</td>
        </tr>
        <tr>
          <th>2</th>
          <td>2015-12-29</td>
          <td>3</td>
          <td>0</td>
          <td>2016-01-01</td>
          <td>7.589336</td>
          <td>7.861191</td>
          <td>7.044088</td>
          <td>8.678294</td>
        </tr>
        <tr>
          <th>3</th>
          <td>2015-12-29</td>
          <td>4</td>
          <td>0</td>
          <td>2016-01-02</td>
          <td>7.825245</td>
          <td>7.508527</td>
          <td>6.771694</td>
          <td>8.245361</td>
        </tr>
        <tr>
          <th>4</th>
          <td>2015-12-29</td>
          <td>5</td>
          <td>0</td>
          <td>2016-01-03</td>
          <td>8.249314</td>
          <td>8.325730</td>
          <td>7.361701</td>
          <td>9.289759</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 238-240

* Concatenates ``rolling_forecast_df`` for all the ``configs`` and stores it as a dataframe in the
  class attribute ``forecasts``. This helps in comparing forecasts and prediction accuracies across ``configs``.

.. GENERATED FROM PYTHON SOURCE LINES 240-244

.. code-block:: default
   :lineno-start: 241


    # Forecasts across configs
    bm.forecasts.head()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>train_end_date</th>
          <th>forecast_step</th>
          <th>split_num</th>
          <th>ts</th>
          <th>actual</th>
          <th>Prophet_forecast</th>
          <th>Prophet_forecast_lower</th>
          <th>Prophet_forecast_upper</th>
          <th>SK_1_forecast</th>
          <th>SK_1_forecast_lower</th>
          <th>SK_1_forecast_upper</th>
          <th>SK_2_forecast</th>
          <th>SK_2_forecast_lower</th>
          <th>SK_2_forecast_upper</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>2015-12-29</td>
          <td>1</td>
          <td>0</td>
          <td>2015-12-30</td>
          <td>8.391403</td>
          <td>8.019895</td>
          <td>7.030519</td>
          <td>8.921258</td>
          <td>7.978420</td>
          <td>7.266909</td>
          <td>8.689931</td>
          <td>7.958042</td>
          <td>7.247970</td>
          <td>8.668114</td>
        </tr>
        <tr>
          <th>1</th>
          <td>2015-12-29</td>
          <td>2</td>
          <td>0</td>
          <td>2015-12-31</td>
          <td>8.004700</td>
          <td>8.039185</td>
          <td>7.084369</td>
          <td>8.967009</td>
          <td>7.918708</td>
          <td>7.244068</td>
          <td>8.593347</td>
          <td>7.903830</td>
          <td>7.224070</td>
          <td>8.583591</td>
        </tr>
        <tr>
          <th>2</th>
          <td>2015-12-29</td>
          <td>3</td>
          <td>0</td>
          <td>2016-01-01</td>
          <td>7.589336</td>
          <td>8.070296</td>
          <td>7.142944</td>
          <td>9.089267</td>
          <td>7.861191</td>
          <td>7.044088</td>
          <td>8.678294</td>
          <td>7.835632</td>
          <td>7.023621</td>
          <td>8.647643</td>
        </tr>
        <tr>
          <th>3</th>
          <td>2015-12-29</td>
          <td>4</td>
          <td>0</td>
          <td>2016-01-02</td>
          <td>7.825245</td>
          <td>7.856180</td>
          <td>6.920646</td>
          <td>8.724623</td>
          <td>7.508527</td>
          <td>6.771694</td>
          <td>8.245361</td>
          <td>7.520270</td>
          <td>6.783844</td>
          <td>8.256696</td>
        </tr>
        <tr>
          <th>4</th>
          <td>2015-12-29</td>
          <td>5</td>
          <td>0</td>
          <td>2016-01-03</td>
          <td>8.249314</td>
          <td>8.243508</td>
          <td>7.256502</td>
          <td>9.234875</td>
          <td>8.325730</td>
          <td>7.361701</td>
          <td>9.289759</td>
          <td>8.348960</td>
          <td>7.394201</td>
          <td>9.303719</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 245-248

For any ``config`` you can plot forecasts across splits. This allows you to quickly check if there is
any particular time window where the test performance drops. The forecasts for adjacent folds will
overlap if the time windows of the corresponding folds overlap.

.. GENERATED FROM PYTHON SOURCE LINES 248-252

.. code-block:: default
   :lineno-start: 249


    fig = bm.plot_forecasts_by_config(config_name="SK_1")
    plotly.io.show(fig)




.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_002.html





.. GENERATED FROM PYTHON SOURCE LINES 253-260

The importance of this function becomes more significant when assessing a models performance over a
longer period e.g. a year or multiple years. You can quickly catch if models test performance drops
during weekends, specific months or holiday seasons.

You can also compare forecasts from multiple ``configs`` by ``forecast_step`` which is
defined as any number between 1 and ``forecast_horizon``. This is useful in forecasts with longer
forecast horizons to check if the forecast volatility changes over time.

.. GENERATED FROM PYTHON SOURCE LINES 260-264

.. code-block:: default
   :lineno-start: 261


    fig = bm.plot_forecasts_by_step(forecast_step=3)
    plotly.io.show(fig)




.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_003.html





.. GENERATED FROM PYTHON SOURCE LINES 265-269

Compare Errors
^^^^^^^^^^^^^^
You can compare the predictive performance of your models via multiple evaluation metrics.
In this example we will use MAPE and RMSE, but you can use any metric from ``EvaluationMetricEnum``.

.. GENERATED FROM PYTHON SOURCE LINES 269-275

.. code-block:: default
   :lineno-start: 270


    metric_dict = {
        "MAPE": EvaluationMetricEnum.MeanAbsolutePercentError,
        "RMSE": EvaluationMetricEnum.RootMeanSquaredError
    }








.. GENERATED FROM PYTHON SOURCE LINES 276-281

Non Grouping Errors
^^^^^^^^^^^^^^^^^^^
To compare evaluation metrics without any grouping use ``get_evaluation_metrics``.
The output shows metric values by ``config`` and ``split``. We can group by ``config_name`` to get
metric values aggregated across all folds.

.. GENERATED FROM PYTHON SOURCE LINES 281-288

.. code-block:: default
   :lineno-start: 282


    # Compute evaluation metrics
    evaluation_metrics_df = bm.get_evaluation_metrics(metric_dict=metric_dict)
    # Aggregate by model across splits
    error_df = evaluation_metrics_df.drop(columns=["split_num"]).groupby("config_name").mean()
    error_df






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>train_MAPE</th>
          <th>test_MAPE</th>
          <th>train_RMSE</th>
          <th>test_RMSE</th>
        </tr>
        <tr>
          <th>config_name</th>
          <th></th>
          <th></th>
          <th></th>
          <th></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>Prophet</th>
          <td>4.009155</td>
          <td>4.064214</td>
          <td>0.485801</td>
          <td>0.427914</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>3.604520</td>
          <td>4.599117</td>
          <td>0.451065</td>
          <td>0.445654</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>3.600035</td>
          <td>4.516884</td>
          <td>0.449397</td>
          <td>0.443833</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 289-294

.. code-block:: default
   :lineno-start: 290


    # Visualize
    fig = bm.plot_evaluation_metrics(metric_dict)
    plotly.io.show(fig)




.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_004.html





.. GENERATED FROM PYTHON SOURCE LINES 295-299

Train MAPE is high because some values in training dataset are close to 0.

You can also compare the predictive accuracy across splits for any model from ``configs``.
This allows you to check if the model performance varies significantly across time periods.

.. GENERATED FROM PYTHON SOURCE LINES 299-306

.. code-block:: default
   :lineno-start: 300


    # Compute evaluation metrics for a single config
    evaluation_metrics_df = bm.get_evaluation_metrics(metric_dict=metric_dict, config_names=["SK_1"])
    # Aggregate by split number
    error_df = evaluation_metrics_df.groupby("split_num").mean()
    error_df.head()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>train_MAPE</th>
          <th>test_MAPE</th>
          <th>train_RMSE</th>
          <th>test_RMSE</th>
        </tr>
        <tr>
          <th>split_num</th>
          <th></th>
          <th></th>
          <th></th>
          <th></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>3.610490</td>
          <td>3.078802</td>
          <td>0.451874</td>
          <td>0.280956</td>
        </tr>
        <tr>
          <th>1</th>
          <td>3.599002</td>
          <td>2.306173</td>
          <td>0.450070</td>
          <td>0.220704</td>
        </tr>
        <tr>
          <th>2</th>
          <td>3.600768</td>
          <td>6.002650</td>
          <td>0.450447</td>
          <td>0.535811</td>
        </tr>
        <tr>
          <th>3</th>
          <td>3.607819</td>
          <td>7.008841</td>
          <td>0.451869</td>
          <td>0.745144</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 307-331

.. code-block:: default
   :lineno-start: 308


    # Visualize
    title = "Average evaluation metric across rolling windows"
    data = []
    # Each row (index) is a config. Adds each row to the bar plot.
    for index in error_df.index:
        data.append(
            go.Bar(
                name=index,
                x=error_df.columns,
                y=error_df.loc[index].values
            )
        )
    layout = go.Layout(
        xaxis=dict(title=None),
        yaxis=dict(title="Metric Value"),
        title=title,
        title_x=0.5,
        showlegend=True,
        barmode="group",
    )
    fig = go.Figure(data=data, layout=layout)
    plotly.io.show(fig)




.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_005.html





.. GENERATED FROM PYTHON SOURCE LINES 332-336

Grouping Errors
^^^^^^^^^^^^^^^
To compare evaluation metrics with grouping use ``get_grouping_evaluation_metrics``.
This allows you to group the error values by time features such as day of week, month etc.

.. GENERATED FROM PYTHON SOURCE LINES 336-346

.. code-block:: default
   :lineno-start: 337


    # Compute grouped evaluation metrics
    grouped_evaluation_df = bm.get_grouping_evaluation_metrics(
        metric_dict=metric_dict,
        which="test",
        groupby_time_feature="str_dow")
    # Aggregate by split number
    error_df = grouped_evaluation_df.groupby(["str_dow", "config_name"]).mean()
    error_df






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th></th>
          <th>split_num</th>
          <th>test MAPE</th>
          <th>test RMSE</th>
        </tr>
        <tr>
          <th>str_dow</th>
          <th>config_name</th>
          <th></th>
          <th></th>
          <th></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th rowspan="3" valign="top">1-Mon</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>8.235986</td>
          <td>0.793895</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>7.309196</td>
          <td>0.696643</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>7.085004</td>
          <td>0.676051</td>
        </tr>
        <tr>
          <th rowspan="3" valign="top">2-Tue</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>3.634147</td>
          <td>0.311949</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>5.938097</td>
          <td>0.506793</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>6.107849</td>
          <td>0.521172</td>
        </tr>
        <tr>
          <th rowspan="3" valign="top">3-Wed</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>3.548818</td>
          <td>0.299014</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>5.132330</td>
          <td>0.434055</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>5.098305</td>
          <td>0.430815</td>
        </tr>
        <tr>
          <th rowspan="3" valign="top">4-Thu</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>2.755924</td>
          <td>0.221571</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>3.294191</td>
          <td>0.264815</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>3.135047</td>
          <td>0.252748</td>
        </tr>
        <tr>
          <th rowspan="3" valign="top">5-Fri</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>4.299685</td>
          <td>0.338231</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>3.602717</td>
          <td>0.285451</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>2.945779</td>
          <td>0.233074</td>
        </tr>
        <tr>
          <th rowspan="3" valign="top">6-Sat</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>3.153319</td>
          <td>0.245955</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>2.751222</td>
          <td>0.214778</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>2.781267</td>
          <td>0.217030</td>
        </tr>
        <tr>
          <th rowspan="3" valign="top">7-Sun</th>
          <th>Prophet</th>
          <td>1.5</td>
          <td>2.821620</td>
          <td>0.251621</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>1.5</td>
          <td>4.166061</td>
          <td>0.367940</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>1.5</td>
          <td>4.464941</td>
          <td>0.393762</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 347-355

.. code-block:: default
   :lineno-start: 348


    # Visualize
    fig = bm.plot_grouping_evaluation_metrics(
        metric_dict=metric_dict,
        which="test",
        groupby_time_feature="str_dow")
    plotly.io.show(fig)




.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_006.html





.. GENERATED FROM PYTHON SOURCE LINES 356-362

As you can see all the models have higher MAPE and RMSE during weekends. That means adding
``is_weekend`` indicator to the models will help.

Compare runtimes
^^^^^^^^^^^^^^^^
You can compare and visualize runtimes of the models using the following codes.

.. GENERATED FROM PYTHON SOURCE LINES 362-369

.. code-block:: default
   :lineno-start: 363


    # Compute runtimes
    runtime_df = bm.get_runtimes()
    # Aggregate across splits
    runtimes_df = runtime_df.drop(columns=["split_num"]).groupby("config_name").mean()
    runtimes_df






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>runtime_sec</th>
        </tr>
        <tr>
          <th>config_name</th>
          <th></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>Prophet</th>
          <td>151.37725</td>
        </tr>
        <tr>
          <th>SK_1</th>
          <td>61.10200</td>
        </tr>
        <tr>
          <th>SK_2</th>
          <td>46.28350</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 370-375

.. code-block:: default
   :lineno-start: 371


    # Visualize
    fig = bm.plot_runtimes()
    plotly.io.show(fig)




.. raw:: html
    :file: /Users/kayang/IdeaProjects/github/greykite/docs/gallery/tutorials/images/sphx_glr_0300_benchmark_007.html





.. GENERATED FROM PYTHON SOURCE LINES 376-403

You can see ``Silverkite`` models run almost 3 times faster compared to ``Prophet``.

Debugging the Benchmark
-----------------------
When the `run` method is called, the input ``configs`` are first assessed of
their suitability for a cohesive benchmarking procedure via the ``validate`` method.
This is done prior to passing the ``configs`` to the forecasting pipeline to save wasted
computing time for the user.
Though not necessary, the user is encouraged to use ``validate`` for debugging.

The ``validate`` method runs a series of checks to ensure that

* The ``configs`` are compatible among themselves. For example, it checks if all the ``configs``
  have the same ``forecast horizon``.
* The ``configs`` are compatible with the CV schema. For example, ``forecast_horizon`` and
  ``periods_between_train_test`` parameters of ``configs`` are
  matched against that of the ``tscv``.

Note that the ``validate`` method does not guarantee that the models will execute properly
while in the pipeline. It is a good idea to do a test run on a smaller data and/ or smaller
number of splits before running the full procedure.

In the event of a mismatch a ``ValueError`` is raised with informative error messages
to help the user in debugging. Some examples are provided below.

Error due to incompatible model components in config
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. GENERATED FROM PYTHON SOURCE LINES 403-418

.. code-block:: default
   :lineno-start: 404


    # regressor_cols is not part of Prophet's model components
    model_components=ModelComponentsParam(
        regressors={
            "regressor_cols": ["regressor1", "regressor2", "regressor_categ"]
        }
    )
    invalid_prophet = replace(Prophet, model_components_param=model_components)
    invalid_configs = {"invalid_prophet": invalid_prophet}
    bm = BenchmarkForecastConfig(df=df, configs=invalid_configs, tscv=tscv)
    try:
        bm.validate()
    except ValueError as err:
        print(err)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Unexpected key(s) found: {'regressor_cols'}. The valid keys are: dict_keys(['add_regressor_dict'])




.. GENERATED FROM PYTHON SOURCE LINES 419-421

Error due to wrong template name
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. GENERATED FROM PYTHON SOURCE LINES 421-431

.. code-block:: default
   :lineno-start: 422


    # model template name is not part of TemplateEnum, thus invalid
    unknown_template = replace(Prophet, model_template="SOME_TEMPLATE")
    invalid_configs = {"unknown_template": unknown_template}
    bm = BenchmarkForecastConfig(df=df, configs=invalid_configs, tscv=tscv)
    try:
        bm.validate()
    except ValueError as err:
        print(err)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Model Template 'SOME_TEMPLATE' is not recognized! Must be one of: SILVERKITE, SILVERKITE_WITH_AR, SILVERKITE_DAILY_1_CONFIG_1, SILVERKITE_DAILY_1_CONFIG_2, SILVERKITE_DAILY_1_CONFIG_3, SILVERKITE_DAILY_1, SILVERKITE_DAILY_90, SILVERKITE_WEEKLY, SILVERKITE_HOURLY_1, SILVERKITE_HOURLY_24, SILVERKITE_HOURLY_168, SILVERKITE_HOURLY_336, SILVERKITE_EMPTY, SK, PROPHET, AUTO_ARIMA, SILVERKITE_TWO_STAGE, SILVERKITE_MULTISTAGE_EMPTY or satisfy the `SimpleSilverkiteTemplate` rules.




.. GENERATED FROM PYTHON SOURCE LINES 432-434

Error due to different forecast horizons in configs
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. GENERATED FROM PYTHON SOURCE LINES 434-448

.. code-block:: default
   :lineno-start: 435


    # the configs are valid by themselves, however incompatible for
    # benchmarking as these have different forecast horizons
    Prophet_forecast_horizon_30 = replace(Prophet, forecast_horizon=30)
    invalid_configs = {
        "Prophet": Prophet,
        "Prophet_30": Prophet_forecast_horizon_30
    }
    bm = BenchmarkForecastConfig(df=df, configs=invalid_configs, tscv=tscv)
    try:
        bm.validate()
    except ValueError as err:
        print(err)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Prophet_30's 'forecast_horizon' (30) does not match that of 'tscv' (7).




.. GENERATED FROM PYTHON SOURCE LINES 449-451

Error due to different forecast horizons in config and tscv
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. GENERATED FROM PYTHON SOURCE LINES 451-459

.. code-block:: default
   :lineno-start: 452


    ## Error due to different forecast horizons in config and tscv
    tscv = RollingTimeSeriesSplit(forecast_horizon=15)
    bm = BenchmarkForecastConfig(df=df, configs=configs, tscv=tscv)
    try:
        bm.validate()
    except ValueError as err:
        print(err)




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Prophet's 'forecast_horizon' (7) does not match that of 'tscv' (15).





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 17 minutes  27.423 seconds)


.. _sphx_glr_download_gallery_tutorials_0300_benchmark.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: 0300_benchmark.py <0300_benchmark.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: 0300_benchmark.ipynb <0300_benchmark.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
